# cortexforge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md  rustfmt.toml
.github/workflows/: ci.yml
docs/: 01-architecture.md  02-implementation-status.md
docs/archive/: 00-evaluation.md  02-feasibility-deep-dive.md
examples/multi-layer/: forge.toml
examples/multi-layer/modules/firmware/: node.toml
examples/multi-layer/modules/firmware/submodules/bsp-uart/: node.toml
examples/multi-layer/modules/firmware/submodules/hal-clock/: node.toml  verify.sh
forge-cli/: Cargo.toml
forge-cli/src/: main.rs
forge-core/: Cargo.toml
forge-core/src/: atomic.rs  budget.rs  config.rs  deliverables.rs  deps.rs  error.rs  event.rs  eventbus.rs  heartbeat.rs  lib.rs  logging.rs  orchestrator.rs  permission.rs  protocol.rs  spawn.rs  state.rs  telemetry.rs  types.rs
forge-core/tests/: mvp_tests.rs
forge-sdk/: Cargo.toml
forge-sdk/src/: lib.rs  prompt.rs  runtime.rs
