[package]
name = "forge-cli"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "CortexForge CLI — entry point for `forge init/run/status/kill/log`"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-core = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
