[package]
name = "forge-core"
edition = { workspace = true }
version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "CortexForge core types, file protocols, state machine, and dependency resolution engine"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
nix = { version = "0.29", features = ["signal"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
